--- a/bio.html
+++ b/bio.html
@@ -28,16 +28,19 @@
             <li class="nav-item">
               <a class="nav-link text-white bg-dark" href="experience.html">Experiences</a>
             </li>
-  <!--          <li class="nav-item">
-              <a class="nav-link text-white bg-dark" href="contact.html">Contact</a>
-            </li>  -->
+<!--            <li class="nav-item">
+              <a class="nav-link text-white bg-dark" style="text-align:right;">Alex Nguyen</a>
+            </li> -->
           </ul>
         </div>
       </nav>
     <section class="borderBio">
       <div class="bio2">
-        <img src="studying.jpg" class="img2" alt="studying_image.jpg">
-        <p class="p1"> Alex Nguyen is a student at OTC. He is a hard working student. His hobbies are to surf the web and play games. Alex likes to take challenges and excels under stress and pressure.</p>
+        <img src="download1.jpg" class="img2" alt="studying_image.jpg">
+        <h1 class="p1">ABOUT ME</h1>
+        <h3 class="p1">This is about Alex Nguyen</h3>
+        <p class="p1"> Alex Nguyen is 21 years old. He's born and raised in Springfield Missouri that he still lives in. Alex likes to help people around him, no matter how hard and how much of a struggle it is; he does his best to try to help. Alex strives for success, no matter the situation he alway brings his A game and finds a way to make the best out of a bad situation.
+<!--        <p class="p1"> Alex Nguyen is a student at OTC. He is a hard working student. His hobbies are to surf the web and play games. Alex likes to take challenges and excels under stress and pressure.</p> -->
       </div>
     </section>
   </body>
